--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +12,78 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* NavBar */
+
+.navbar{
+  width: 65%;
+  margin:0 auto;
+  
+}
+
+nav{
+  display: flex;
+  justify-content: space-between;
+}
+
+nav img{
+  width: 200px;
+  height: 60px;
+}
+
+nav ul{
+  display: flex;
+  gap: 50px;
+}
+/* END NavBar */
+
+
+
+/* Section */
+
+.section{
+  margin-top: 10px;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  background-color:rgb(202, 197, 197);
+}
+.section .partie1{
+  margin-left: 210px;
+  display: flex;
+  flex-direction: column;
+}
+.section .partie1 h2,h1{
+  color:rgb(103, 165, 144);
+}
+
+.section p {
+  width: 500px;
+  font-size: 13px;
+  font-weight: 500px;
+}
+.section .partie1 ul li{
+  display: flex;
+}
+
+
+/* END Section */
+
+
+/* footer */ 
+
+
+.footer {
+  background-color: rgb(44, 42, 42);
+}
+
+.footer p{
+  margin: 0 auto;
+  width: 500px;
+  height: 50px;
+  color:aquamarine;
+  font-size: 25px;
+}
+
+
+/* END Footer */
